--- a/.ci_support/environment.yml
+++ b/.ci_support/environment.yml
@@ -4,11 +4,12 @@ dependencies:
 - python
 - coverage
 - coveralls
-- numpy =1.23.0
-- tqdm =4.64.0
-- pandas =1.4.3
-- sqlalchemy =1.4.39
-- scikit-learn =1.1.1
 - bleach =5.0.0
 - cssutils =2.4.2
 - langdetect =1.0.9
+- numpy =1.23.0
+- pandas =1.4.3
+- pydatamail =0.0.5
+- scikit-learn =1.1.1
+- sqlalchemy =1.4.39
+- tqdm =4.64.0
